force-app/main/default/objects/Yash_ARM_Training__c/Yash_ARM_Training__c.object-meta.xml
<CustomObject>
    <description>This is a custom object created to test the functionality of the Commit Labels</description>
    <label>Yash ARM Training</label>
    <nameField>
        <label>Yash ARM Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yash ARM Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>