force-app/main/default/objects/Yash_ARM_Training__c/fields/Deployment_Module__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Module__c</fullName>
    <description>Sample Description: That describes about the Deployment Module</description>
    <label>Deployment Module</label>
    <length>30</length>
    <type>Text</type>
</CustomField>