force-app/main/default/objects/Yash_ARM_Training__c/fields/ENV_Test__c.field-meta.xml
<CustomField>
    <fullName>ENV_Test__c</fullName>
    <label>ENV Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>