force-app/main/default/objects/Yash_ARM_Training__c/fields/VC_Module__c.field-meta.xml
<CustomField>
    <fullName>VC_Module__c</fullName>
    <description>Sample Description:</description>
    <label>VC Module</label>
    <length>30</length>
    <type>Text</type>
</CustomField>